# movie-recommendation-web-app

./: .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.test  Dockerfile.test2  Makefile  README.md  convert.py  movie_inference_result.html  subset.py
Dockerfiles/: Dockerfile.test3  Dockerfile.test4  Dockerfile.test5
model/: model.npz  model.safetensors  rust_model.ot
src/: main.rs  setup.rs  setup_final.rs  test_model.rs  test_model_1encode.rs
static/: index.html
static/root/: finder.html  index.html
